# VPS-Net-Pytorch

deploy/: CMakeLists.txt
deploy/include/: l2_norm_plugin.h
deploy/src/: alex.cpp  l2_norm_plugin.cpp
model/: demo.py  detecter.py  evaluate_yolo.py  train_classify.py  train_yolo.py
model/config/: custom.data  yolov3.cfg
model/data/: .gitignore  angle_type.names
model/net/: classify_net.py  yolo.py
model/util/: augmentations.py  datasets.py  logger.py  utils.py
